welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: reassignment to val
    if (estSurBiscuit = true) {
                      ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compteur2 <- 0 to 5) {
                 ^